--- a/app/src/main/res/layout/dialog_input_cost.xml
+++ b/app/src/main/res/layout/dialog_input_cost.xml
@@ -1,14 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="3dp"
-        app:cardUseCompatPadding="true">
+    <androidx.cardview.widget.CardView style="@style/gs_element_card_view">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -17,66 +11,61 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tv_message"
+                style="@style/gs_text_regular_14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/nsregular"
-                android:lineSpacingExtra="3dp"
-                android:textColor="@color/black"
-                android:textSize="14dp"
+                android:text="상품 가격을 입력하세요"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:text="상품 가격을 입력하세요" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/et_cost"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
+                android:layout_marginTop="15dp"
                 android:fontFamily="@font/nsregular"
+                android:gravity="center"
+                android:hint="18,500"
+                android:inputType="number"
                 android:lineSpacingExtra="3dp"
                 android:textColor="@color/black"
                 android:textSize="16dp"
-                android:inputType="number"
-                android:hint="18,500"
-                android:layout_marginTop="15dp"
-                app:layout_constraintTop_toBottomOf="@+id/tv_message"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_message" />
 
             <LinearLayout
                 android:id="@+id/container_btn"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:layout_marginTop="5dp"
-                app:layout_constraintTop_toBottomOf="@id/et_cost"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent">
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/et_cost">
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btn_negative"
+                    style="@style/gs_text_regular_13"
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="20dp"
-                    android:background="@android:color/transparent"
-                    android:fontFamily="@font/nsregular"
+                    android:layout_weight="1"
+                    android:gravity="center"
                     android:text="취 소"
-                    android:textColor="@color/main"
-                    android:textSize="12dp" />
+                    android:textColor="@color/main" />
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btn_positive"
+                    style="@style/gs_text_regular_13"
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="20dp"
-                    android:background="@android:color/transparent"
-                    android:fontFamily="@font/nsregular"
+                    android:layout_weight="1"
+                    android:gravity="center"
                     android:text="확 인"
-                    android:textColor="@color/main"
-                    android:textSize="12dp" />
+                    android:textColor="@color/main" />
 
 
             </LinearLayout>
