--- a/app/src/main/res/layout/fragment_order_detail.xml
+++ b/app/src/main/res/layout/fragment_order_detail.xml
@@ -5,21 +5,22 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.santaistiger.gomourdeliveryapp.ui.viewmodel.OrderDetailViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="15dp" >
+        style="@style/gs_root_container"
+        android:layout_marginTop="0dp">
 
         <!-- 스크롤 - 지도 / 정보 확인칸 / 연락 버튼 -->
         <ScrollView
             android:id="@+id/scrollView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_marginBottom="10dp"
             app:layout_constraintBottom_toTopOf="@+id/container_contact"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -29,18 +30,13 @@
                 android:id="@+id/container"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:paddingBottom="10dp"
-                android:paddingHorizontal="15dp" >
+                android:orientation="vertical">
 
                 <!-- 지도 -->
                 <androidx.cardview.widget.CardView
+                    style="@style/gs_element_card_view"
                     android:layout_width="match_parent"
                     android:layout_height="300dp"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginHorizontal="5dp"
-                    app:cardCornerRadius="10dp"
-                    app:cardElevation="3dp"
                     tools:foreground="#55555555">
 
                     <FrameLayout
@@ -54,51 +50,36 @@
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
-                    android:layout_marginBottom="15dp"
                     android:layout_marginHorizontal="5dp"
+                    android:layout_marginBottom="15dp"
                     android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/tv_delivery_time"
+                        style="@style/gs_text_regular_14"
                         bind_detail_delivery_time="@{viewModel.order}"
                         android:layout_width="0dp"
-                        android:layout_weight="4"
                         android:layout_height="match_parent"
-                        android:gravity="center_vertical"
-                        android:fontFamily="@font/nsregular"
-                        android:textColor="@color/black"
+                        android:layout_weight="4"
                         android:textSize="17dp"
                         tools:text="2021-03-29 (금) 13:24 도착 예정" />
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
-                <!-- 출발지 및 목적지 -->
-                <androidx.appcompat.widget.LinearLayoutCompat
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="25dp"
-                    android:orientation="vertical">
+                <!-- 출발지 및 배달 장소 -->
+                <androidx.appcompat.widget.LinearLayoutCompat style="@style/gs_order_element_container">
 
                     <!-- 제목 -->
                     <androidx.appcompat.widget.AppCompatTextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="5dp"
-                        android:layout_marginBottom="5dp"
-                        android:fontFamily="@font/nsbold"
-                        android:text="@string/address_do_order_fragment"
-                        android:textColor="@color/black"
-                        android:textSize="17dp" />
+                        style="@style/gs_title"
+                        android:text="@string/title_address" />
 
                     <!-- 가게 -->
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rv_store"
-                        bind_detail_store_list="@{viewModel.order}"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:clipToPadding="false"
-                        android:nestedScrollingEnabled="false" />
+                        style="@style/gs_recycler_view"
+                        bind_detail_store_list="@{viewModel.order}" />
 
-                    <!-- 목적지 -->
+                    <!-- 배달 장소 -->
                     <com.santaistiger.gomourdeliveryapp.ui.customview.DetailDestinationView
                         android:id="@+id/cv_destination"
                         bind_detail_destination="@{viewModel.order}"
@@ -107,23 +88,12 @@
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
                 <!-- 배송 메시지 -->
-                <androidx.appcompat.widget.LinearLayoutCompat
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="25dp"
-                    android:orientation="vertical">
+                <androidx.appcompat.widget.LinearLayoutCompat style="@style/gs_order_element_container">
 
                     <!-- 제목 -->
                     <androidx.appcompat.widget.AppCompatTextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="5dp"
-                        android:layout_marginBottom="5dp"
-                        android:fontFamily="@font/nsbold"
-                        android:paddingLeft="5dp"
-                        android:text="@string/message_do_order_fragment"
-                        android:textColor="@color/black"
-                        android:textSize="17dp" />
+                        style="@style/gs_title"
+                        android:text="@string/title_message" />
 
                     <!-- 메시지 -->
                     <com.santaistiger.gomourdeliveryapp.ui.customview.DetailMessageView
@@ -134,23 +104,12 @@
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
                 <!-- 비용 -->
-                <androidx.appcompat.widget.LinearLayoutCompat
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="10dp"
-                    android:orientation="vertical">
+                <androidx.appcompat.widget.LinearLayoutCompat style="@style/gs_order_element_container">
 
                     <!-- 제목 -->
                     <androidx.appcompat.widget.AppCompatTextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="5dp"
-                        android:layout_marginBottom="5dp"
-                        android:fontFamily="@font/nsbold"
-                        android:paddingLeft="5dp"
-                        android:text="@string/price_do_order_fragment"
-                        android:textColor="@color/black"
-                        android:textSize="17dp" />
+                        style="@style/gs_title"
+                        android:text="@string/title_price" />
 
                     <!-- 가격 -->
                     <com.santaistiger.gomourdeliveryapp.ui.customview.DetailPriceView
@@ -168,38 +127,23 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginHorizontal="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_call_customer"
-                android:layout_width="match_parent"
-                android:layout_height="36dp"
-                android:layout_marginHorizontal="5dp"
+                style="@style/gs_bottom_btn"
                 android:layout_marginBottom="5dp"
-                android:background="@drawable/shape_bottom_btn"
-                android:fontFamily="@font/nsbold"
                 android:onClick="@{() -> viewModel.onCallBtnClick()}"
-                android:text="배달 기사에게 전화하기"
-                android:textColor="@color/white"
-                android:textSize="14dp" />
+                android:text="@string/call_customer" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_text_customer"
-                android:layout_width="match_parent"
-                android:layout_height="36dp"
-                android:layout_marginHorizontal="5dp"
-                android:background="@drawable/shape_bottom_btn"
-                android:fontFamily="@font/nsbold"
+                style="@style/gs_bottom_btn"
                 android:onClick="@{() -> viewModel.onTextBtnClick()}"
-                android:text="배달 기사에게 문자하기"
-                android:textColor="@color/white"
-                android:textSize="14dp" />
+                android:text="@string/sms_customer" />
         </androidx.appcompat.widget.LinearLayoutCompat>
-
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
