--- a/app/src/main/res/layout/item_detail_destination.xml
+++ b/app/src/main/res/layout/item_detail_destination.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.santaistiger.gomourdeliveryapp.ui.viewmodel.OrderDetailViewModel" />
@@ -12,19 +13,13 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView_destination"
+            style="@style/gs_element_card_view"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
             android:minHeight="43dp"
-            app:cardCornerRadius="10dp"
-            app:cardElevation="3dp"
-            android:layout_marginLeft="3dp"
-            android:layout_marginRight="3dp"
-            android:layout_marginTop="3dp"
-            android:layout_marginBottom="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/container_complete"
             app:layout_constraintStart_toStartOf="parent"
@@ -34,16 +29,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:paddingHorizontal="5dp"
-                android:paddingVertical="5dp">
+                android:padding="5dp">
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/iv_destination"
-                    android:layout_width="40dp"
-                    android:layout_height="24dp"
-                    android:background="@android:color/transparent"
+                    style="@style/gs_icon"
                     android:padding="2dp"
-                    android:scaleType="fitCenter"
                     android:tint="@color/icon_color"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -52,18 +43,15 @@
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tv_store_address"
+                    style="@style/gs_text_bold_14"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="7"
-                    android:fontFamily="@font/nsbold"
-                    android:textColor="@color/black"
-                    android:textSize="14dp"
-                    android:lineSpacingExtra="3dp"
-                    tools:text="도착주소주소\n도착 주소를 주소"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/iv_destination"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="도착주소주소\n도착 주소를 주소" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
 
@@ -71,6 +59,7 @@
             android:id="@+id/container_complete"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
+            android:layout_marginVertical="2dp"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -79,52 +68,49 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="60dp"
                 android:layout_height="0dp"
-                android:layout_weight="1"
-                android:minHeight="20dp"
-                app:cardCornerRadius="6dp"
-                app:cardElevation="1dp"
-                android:backgroundTint="@color/light_gray"
                 android:layout_marginHorizontal="3dp"
-                android:layout_marginVertical="3dp" >
+                android:layout_marginTop="3dp"
+                android:layout_marginBottom="1dp"
+                android:layout_weight="1"
+                android:backgroundTint="@color/light_gray"
+                android:minHeight="18dp"
+                app:cardCornerRadius="5dp"
+                app:cardElevation="2dp">
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btn_pickup_complete"
-                    android:background="@android:color/transparent"
+                    style="@style/gs_text_regular_13"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:textColor="@color/black"
-                    android:textSize="10dp"
-                    android:fontFamily="@font/nsregular"
-                    android:hint="픽업 완료"
-                    android:onClick="@{() -> viewModel.onPickupCompleteBtnClick()}" />
-
+                    android:hint="@string/message_pick_up_complete"
+                    android:onClick="@{() -> viewModel.onPickupCompleteBtnClick()}"
+                    android:textSize="10dp" />
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="60dp"
                 android:layout_height="0dp"
-                android:layout_weight="1"
-                android:minHeight="20dp"
-                app:cardCornerRadius="6dp"
-                app:cardElevation="1dp"
-                android:backgroundTint="@color/light_gray"
                 android:layout_marginHorizontal="3dp"
-                android:layout_marginBottom="5dp" >
+                android:layout_marginTop="1dp"
+                android:layout_marginBottom="3dp"
+                android:layout_weight="1"
+                android:backgroundTint="@color/light_gray"
+                android:minHeight="18dp"
+                app:cardCornerRadius="5dp"
+                app:cardElevation="2dp">
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btn_delivery_complete"
-                    android:background="@android:color/transparent"
+                    style="@style/gs_text_regular_13"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:textColor="@color/black"
-                    android:textSize="10dp"
-                    android:fontFamily="@font/nsregular"
-                    android:hint="배달 완료"
-                    android:onClick="@{() -> viewModel.onDeliveryCompleteBtnClick()}" />
+                    android:hint="@string/message_delivery_complete"
+                    android:onClick="@{() -> viewModel.onDeliveryCompleteBtnClick()}"
+                    android:textSize="10dp" />
 
             </androidx.cardview.widget.CardView>
         </androidx.appcompat.widget.LinearLayoutCompat>
