--- a/app/src/main/res/layout/item_detail_store.xml
+++ b/app/src/main/res/layout/item_detail_store.xml
@@ -17,13 +17,8 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView_store"
+            style="@style/gs_element_card_view"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="3dp"
-            android:layout_marginTop="3dp"
-            android:layout_marginBottom="5dp"
-            app:cardCornerRadius="10dp"
-            app:cardElevation="3dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/container_cost"
             app:layout_constraintStart_toStartOf="parent"
@@ -32,16 +27,12 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingHorizontal="5dp"
-                android:paddingVertical="5dp">
+                android:padding="5dp">
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/iv_store"
-                    android:layout_width="40dp"
-                    android:layout_height="24dp"
-                    android:background="@android:color/transparent"
+                    style="@style/gs_icon"
                     android:padding="2dp"
-                    android:scaleType="fitCenter"
                     android:tint="@color/icon_color"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -62,26 +53,19 @@
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:id="@+id/tv_store_address"
+                        style="@style/gs_text_bold_14"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="7dp"
-                        android:fontFamily="@font/nsbold"
-                        android:lineSpacingExtra="3dp"
+                        android:layout_marginBottom="5dp"
                         android:text="@{item.place.getDisplayName}"
-                        android:textColor="@color/black"
-                        android:textSize="14dp"
                         tools:text="가게 도로명 주소 \n(가게명)" />
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:id="@+id/tv_menu"
+                        style="@style/gs_text_regular_13"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@android:color/transparent"
-                        android:fontFamily="@font/nsregular"
-                        android:lineSpacingExtra="3dp"
                         android:text="@{item.menu}"
-                        android:textColor="@color/black"
-                        android:textSize="13dp"
                         tools:text="메뉴 메뉴 메뉴 메뉴 메뉴 " />
                 </androidx.appcompat.widget.LinearLayoutCompat>
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -98,24 +82,19 @@
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView_cost"
+                style="@style/gs_element_card_view"
                 android:layout_width="60dp"
-                android:layout_height="match_parent"
-                android:layout_marginHorizontal="3dp"
-                android:layout_marginTop="3dp"
-                android:layout_marginBottom="5dp"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="3dp">
+                android:layout_height="match_parent">
 
                 <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/btn_input_price"
+                    style="@style/gs_text_regular_13"
                     bind_detail_cost="@{item.cost}"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@color/light_gray"
-                    android:fontFamily="@font/nsregular"
                     android:gravity="center"
                     android:hint="가격\n입력"
-                    android:textColor="@color/black"
                     android:textSize="10dp" />
             </androidx.cardview.widget.CardView>
         </androidx.appcompat.widget.LinearLayoutCompat>
